# init-repo-template

./: .cmake-lint.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  setup.cfg
.ci/: license_header.txt
.ci/assign-reviewers/: reviewer.yml
.ci/linters/: linters.yml
.ci/precommit/: autofix.yml
.ci/pytest/: tests.yml
.ci/release-pkg/: release.yml
.ci/scripts/: generate_doc.sh  generate_pypirc.py
.devcontainer/: Dockerfile  devcontainer.json
docs/config/: eisvogel.yaml
src/: BUILD  main.cpp  main.h
src/division/: BUILD  CMakeLists.txt  division.cpp  division.h
test/: BUILD  CMakeLists.txt  main.cpp
test/src/: BUILD  divider_tests.cpp
